[project]
name = "asap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.0.2",
    "zaber-motion>=8.4.0",
]
authors = [
    {name = "Ethan Katz"}
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.3",
    "pytest>=9.0.2",
    "ruff>=0.15.7",
]

[tool.ruff]

[tool.ruff.lint]
